Creating Journal Application using Spring Boot